--- a/pyproject.toml
+++ b/pyproject.toml
@@ -84,12 +84,11 @@ dev = [
     "coverage_pth",
     "flake8",
     "isort",
-    "mock",
     "myst-parser",
     "pre-commit",
     "pycodestyle",
     "pypandoc",
-    "pytest==8.0.0",
+    "pytest",
     "pytest-rerunfailures",
     "sphinx",
     "sphinx_rtd_theme",
