--- a/requirements.txt
+++ b/requirements.txt
@@ -16,9 +16,9 @@ attrs==23.2.0
     #   trio
 blinker==1.8.2
     # via flask
-boto3==1.34.100
+boto3==1.34.122
     # via dallinger
-botocore==1.34.100
+botocore==1.34.122
     # via
     #   boto3
     #   s3transfer
@@ -28,7 +28,7 @@ build==1.2.1
     #   pip-tools
 cached-property==1.5.2
     # via dallinger
-certifi==2024.2.2
+certifi==2024.6.2
     # via
     #   requests
     #   selenium
@@ -42,13 +42,13 @@ click==8.1.7
     #   flask
     #   pip-tools
     #   rq
-cryptography==42.0.7
+cryptography==42.0.8
     # via pyopenssl
 decorator==5.1.1
     # via ipython
 executing==2.0.1
     # via stack-data
-faker==25.0.1
+faker==25.8.0
     # via dallinger
 flask==3.0.3
     # via
@@ -111,7 +111,7 @@ matplotlib-inline==0.1.7
     # via ipython
 outcome==1.3.0.post0
     # via trio
-packaging==24.0
+packaging==24.1
     # via
     #   build
     #   gunicorn
@@ -123,7 +123,7 @@ pexpect==4.9.0
     #   ipython
 pip-tools==7.4.1
     # via dallinger
-prompt-toolkit==3.0.43
+prompt-toolkit==3.0.46
     # via ipython
 psutil==5.9.8
     # via dallinger
@@ -154,11 +154,11 @@ python-dateutil==2.9.0.post0
     #   heroku3
 pytz==2024.1
     # via apscheduler
-redis==5.0.4
+redis==5.0.5
     # via
     #   dallinger
     #   rq
-requests==2.31.0
+requests==2.32.3
     # via
     #   dallinger
     #   heroku3
@@ -166,7 +166,7 @@ rq==1.16.2
     # via dallinger
 s3transfer==0.10.1
     # via boto3
-selenium==4.20.0
+selenium==4.21.0
     # via dallinger
 simple-websocket==1.0.0
     # via flask-sock
@@ -201,13 +201,13 @@ traitlets==5.14.3
     # via
     #   ipython
     #   matplotlib-inline
-trio==0.25.0
+trio==0.25.1
     # via
     #   selenium
     #   trio-websocket
 trio-websocket==0.11.1
     # via selenium
-typing-extensions==4.11.0
+typing-extensions==4.12.2
     # via selenium
 tzlocal==5.2
     # via
@@ -243,7 +243,7 @@ yaspin==3.0.2
     # via dallinger
 zope-event==5.0
     # via gevent
-zope-interface==6.3
+zope-interface==6.4.post2
     # via gevent
 
 # The following packages are considered to be unsafe in a requirements file:
