--- a/requirements.txt
+++ b/requirements.txt
@@ -16,9 +16,9 @@ attrs==23.2.0
     #   trio
 blinker==1.8.2
     # via flask
-boto3==1.34.122
+boto3==1.34.137
     # via dallinger
-botocore==1.34.122
+botocore==1.34.137
     # via
     #   boto3
     #   s3transfer
@@ -48,7 +48,7 @@ decorator==5.1.1
     # via ipython
 executing==2.0.1
     # via stack-data
-faker==25.8.0
+faker==26.0.0
     # via dallinger
 flask==3.0.3
     # via
@@ -123,9 +123,9 @@ pexpect==4.9.0
     #   ipython
 pip-tools==7.4.1
     # via dallinger
-prompt-toolkit==3.0.46
+prompt-toolkit==3.0.47
     # via ipython
-psutil==5.9.8
+psutil==6.0.0
     # via dallinger
 psycopg2==2.9.9
     # via
@@ -154,7 +154,7 @@ python-dateutil==2.9.0.post0
     #   heroku3
 pytz==2024.1
     # via apscheduler
-redis==5.0.5
+redis==5.0.7
     # via
     #   dallinger
     #   rq
@@ -164,9 +164,9 @@ requests==2.32.3
     #   heroku3
 rq==1.16.2
     # via dallinger
-s3transfer==0.10.1
+s3transfer==0.10.2
     # via boto3
-selenium==4.21.0
+selenium==4.22.0
     # via dallinger
 simple-websocket==1.0.0
     # via flask-sock
@@ -191,7 +191,7 @@ stack-data==0.6.3
     # via ipython
 tabulate==0.9.0
     # via dallinger
-tenacity==8.3.0
+tenacity==8.4.2
     # via dallinger
 termcolor==2.3.0
     # via yaspin
@@ -217,7 +217,7 @@ ua-parser==0.18.0
     # via
     #   dallinger
     #   user-agents
-urllib3==1.26.18
+urllib3==1.26.19
     # via
     #   botocore
     #   dallinger
@@ -227,6 +227,8 @@ user-agents==2.2.0
     # via dallinger
 wcwidth==0.2.13
     # via prompt-toolkit
+websocket-client==1.8.0
+    # via selenium
 werkzeug==3.0.3
     # via
     #   flask
