--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,7 @@ dependencies = [
     "heroku3",
     "ipython < 8.19",
     "localconfig",
+    "numpy < 2.1",
     "pexpect",
     "pip",
     "pip-tools",
@@ -84,7 +85,7 @@ dev = [
     "coverage_pth",
     "flake8",
     "isort",
-    "myst-parser",
+    "myst-parser < 4",
     "pre-commit",
     "pycodestyle",
     "pypandoc",
