--- a/requirements.txt
+++ b/requirements.txt
@@ -10,29 +10,29 @@ apscheduler==3.10.4
     # via dallinger
 asttokens==2.4.1
     # via stack-data
-attrs==23.2.0
+attrs==24.2.0
     # via
     #   outcome
     #   trio
 blinker==1.8.2
     # via flask
-boto3==1.34.137
+boto3==1.35.19
     # via dallinger
-botocore==1.34.137
+botocore==1.35.19
     # via
     #   boto3
     #   s3transfer
-build==1.2.1
+build==1.2.2
     # via
     #   dallinger
     #   pip-tools
 cached-property==1.5.2
     # via dallinger
-certifi==2024.6.2
+certifi==2024.8.30
     # via
     #   requests
     #   selenium
-cffi==1.16.0
+cffi==1.17.1
     # via cryptography
 charset-normalizer==3.3.2
     # via requests
@@ -42,13 +42,13 @@ click==8.1.7
     #   flask
     #   pip-tools
     #   rq
-cryptography==42.0.8
+cryptography==43.0.1
     # via pyopenssl
 decorator==5.1.1
     # via ipython
-executing==2.0.1
+executing==2.1.0
     # via stack-data
-faker==26.0.0
+faker==28.4.1
     # via dallinger
 flask==3.0.3
     # via
@@ -71,17 +71,18 @@ gevent==24.2.1
     # via
     #   dallinger
     #   gunicorn
-greenlet==3.0.3
+greenlet==3.1.0
     # via
     #   dallinger
     #   gevent
-gunicorn==22.0.0
+    #   sqlalchemy
+gunicorn==23.0.0
     # via dallinger
 h11==0.14.0
     # via wsproto
 heroku3==5.2.1
     # via dallinger
-idna==3.7
+idna==3.8
     # via
     #   requests
     #   trio
@@ -108,6 +109,8 @@ markupsafe==2.1.5
     #   wtforms
 matplotlib-inline==0.1.7
     # via ipython
+numpy==2.0.2
+    # via dallinger
 outcome==1.3.0.post0
     # via trio
 packaging==24.1
@@ -132,13 +135,13 @@ psycopg2==2.9.9
     #   sqlalchemy-postgres-copy
 ptyprocess==0.7.0
     # via pexpect
-pure-eval==0.2.2
+pure-eval==0.2.3
     # via stack-data
 pycparser==2.22
     # via cffi
 pygments==2.18.0
     # via ipython
-pyopenssl==24.1.0
+pyopenssl==24.2.1
     # via dallinger
 pyproject-hooks==1.1.0
     # via
@@ -151,9 +154,9 @@ python-dateutil==2.9.0.post0
     #   botocore
     #   faker
     #   heroku3
-pytz==2024.1
+pytz==2024.2
     # via apscheduler
-redis==5.0.7
+redis==5.0.8
     # via
     #   dallinger
     #   rq
@@ -165,7 +168,7 @@ rq==1.16.2
     # via dallinger
 s3transfer==0.10.2
     # via boto3
-selenium==4.22.0
+selenium==4.24.0
     # via dallinger
 simple-websocket==1.0.0
     # via flask-sock
@@ -180,7 +183,7 @@ sniffio==1.3.1
     # via trio
 sortedcontainers==2.4.0
     # via trio
-sqlalchemy==1.4.52
+sqlalchemy==1.4.54
     # via
     #   dallinger
     #   sqlalchemy-postgres-copy
@@ -190,7 +193,7 @@ stack-data==0.6.3
     # via ipython
 tabulate==0.9.0
     # via dallinger
-tenacity==8.4.2
+tenacity==9.0.0
     # via dallinger
 termcolor==2.3.0
     # via yaspin
@@ -200,7 +203,7 @@ traitlets==5.14.3
     # via
     #   ipython
     #   matplotlib-inline
-trio==0.25.1
+trio==0.26.2
     # via
     #   selenium
     #   trio-websocket
@@ -216,7 +219,7 @@ ua-parser==0.18.0
     # via
     #   dallinger
     #   user-agents
-urllib3==1.26.19
+urllib3==1.26.20
     # via
     #   botocore
     #   dallinger
@@ -228,11 +231,11 @@ wcwidth==0.2.13
     # via prompt-toolkit
 websocket-client==1.8.0
     # via selenium
-werkzeug==3.0.3
+werkzeug==3.0.4
     # via
     #   flask
     #   flask-login
-wheel==0.43.0
+wheel==0.44.0
     # via pip-tools
 wsproto==1.2.0
     # via
@@ -244,7 +247,7 @@ yaspin==3.0.2
     # via dallinger
 zope-event==5.0
     # via gevent
-zope-interface==6.4.post2
+zope-interface==7.0.3
     # via gevent
 
 # The following packages are considered to be unsafe in a requirements file:
