Install the main package during rtd install.

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -6,7 +6,11 @@ build:
 
 python:
   install:
-      - requirements: dev-requirements.txt
+    - requirements: dev-requirements.txt
+    - method: pip
+      path: .
+      extra_requirements:
+        - dev
 
 sphinx:
   configuration: docs/source/conf.py
