--- a/pyproject.toml
+++ b/pyproject.toml
@@ -100,6 +100,12 @@ docker = [
     "paramiko",
     "sshtunnel",
 ]
+ec2 = [
+    "pandas",
+    "paramiko",
+    "tqdm",
+    "yaspin",
+]
 jupyter = [
     "ipywidgets",
     "jupyter",
