--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -7,6 +7,7 @@ build:
 python:
   install:
     - requirements: dev-requirements.txt
+    - requirements: requirements-readthedocs.txt
     - method: pip
       path: .
       extra_requirements:
