post_install jsdoc

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -3,6 +3,9 @@ build:
   os: ubuntu-lts-latest
   tools:
     python: "3.12"
+    jobs:
+    post_install:
+      - npm install -g jsdoc
 
 python:
   install:
