--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -3,6 +3,8 @@ build:
   os: ubuntu-lts-latest
   tools:
     python: "3.12"
+  apt_packages:
+    - npm
   jobs:
     post_install:
       - npm install -g jsdoc
