Fix building Sphinx documentation (#6904)
* Fix building Sphinx documentation

--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -3,10 +3,15 @@ build:
   os: ubuntu-lts-latest
   tools:
     python: "3.12"
+    nodejs: "latest"
+  jobs:
+    post_install:
+      - npm install -g jsdoc
 
 python:
   install:
     - requirements: dev-requirements.txt
+    - requirements: requirements-readthedocs.txt
     - method: pip
       path: .
       extra_requirements:
