Add restart: unless-stopped to all services

--- a/dallinger/docker/ssh_templates/docker-compose-server.yml
+++ b/dallinger/docker/ssh_templates/docker-compose-server.yml
@@ -29,6 +29,7 @@ services:
       - dallinger
   dozzle:
     container_name: dozzle
+    restart: unless-stopped
     image: amir20/dozzle:latest
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
