Fix tagging latest Docker image as 'latest'

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,11 +64,15 @@ jobs:
           push: true
           load: false
           target: dallinger
-          tags: ghcr.io/dallinger/dallinger:${{ steps.vars.outputs.version }}
+          tags: |
+            ghcr.io/dallinger/dallinger:${{ steps.vars.outputs.version }}
+            ghcr.io/dallinger/dallinger:latest
       - name: Build ghcr.io/dallinger/dallinger-bot docker image
         uses: docker/build-push-action@v5
         with:
           push: true
           load: false
           target: dallinger-bot
-          tags: ghcr.io/dallinger/dallinger-bot:${{ steps.vars.outputs.version }}
+          tags: |
+            ghcr.io/dallinger/dallinger-bot:${{ steps.vars.outputs.version }}
+            ghcr.io/dallinger/dallinger:latest
