Pin sphinxcontrib-spelling < 8.0.1

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -93,7 +93,7 @@ dev = [
     "pytest-rerunfailures",
     "sphinx",
     "sphinx_rtd_theme",
-    "sphinxcontrib-spelling",
+    "sphinxcontrib-spelling < 8.0.1",
     "tox",
 ]
 docker = [
