--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ dependencies = [
     "boto3",
     "build",
     "cached-property",
-    "click < 8.2",
+    "click",
     "faker",
     "flask-sock",
     "flask",
@@ -47,9 +47,9 @@ dependencies = [
     "greenlet",
     "gunicorn[gevent]",
     "heroku3",
-    "ipython < 8.19",
+    "ipython < 9",
     "localconfig",
-    "numpy < 2.1",
+    "numpy < 2.3",
     "pexpect",
     "pip",
     "pip-tools",
@@ -89,15 +89,15 @@ dev = [
     "coverage_pth",
     "flake8",
     "isort",
-    "myst-parser < 4",
+    "myst-parser",
     "pre-commit",
     "pycodestyle",
     "pypandoc",
     "pytest",
     "pytest-rerunfailures",
-    "sphinx",
+    "sphinx < 8.2",
     "sphinx_rtd_theme",
-    "sphinxcontrib-spelling < 8.0.1",
+    "sphinxcontrib-spelling",
     "tox",
 ]
 docker = [
@@ -161,7 +161,7 @@ include = [
 
 [tool.black]
 line-length = 88
-target-version = ["py312"]
+target-version = ["py313"]
 include = '\.pyi?$'
 exclude = '''
 /(
