--- a/requirements.txt
+++ b/requirements.txt
@@ -16,9 +16,9 @@ attrs==24.3.0
     #   trio
 blinker==1.9.0
     # via flask
-boto3==1.35.94
+boto3==1.35.98
     # via dallinger
-botocore==1.35.94
+botocore==1.35.98
     # via
     #   boto3
     #   s3transfer
@@ -48,7 +48,7 @@ decorator==5.1.1
     # via ipython
 executing==2.1.0
     # via stack-data
-faker==33.3.0
+faker==33.3.1
     # via dallinger
 flask==3.1.0
     # via
@@ -141,7 +141,7 @@ pycparser==2.22
     # via cffi
 pygments==2.19.1
     # via ipython
-pyopenssl==24.3.0
+pyopenssl==25.0.0
     # via dallinger
 pyproject-hooks==1.2.0
     # via
@@ -208,6 +208,7 @@ trio-websocket==0.11.1
 typing-extensions==4.12.2
     # via
     #   faker
+    #   pyopenssl
     #   selenium
 tzlocal==5.2
     # via
