Try to fix dependencies with a hack

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,7 +1,7 @@
 [bumpversion]
-current_version = 11.1.0a1
+current_version = 11.0.1
 parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)((?P<release>[a-z]+)(?P<build>\d+))?
-serialize = 
+serialize =
 	{major}.{minor}.{patch}{release}{build}
 	{major}.{minor}.{patch}
 commit = False
@@ -12,7 +12,7 @@ message = Release version v{new_version}
 [bumpversion:part:release]
 optional_value = prod
 first_value = a
-values = 
+values =
 	a
 	prod
 
