--- a/requirements.txt
+++ b/requirements.txt
@@ -16,9 +16,9 @@ attrs==24.3.0
     #   trio
 blinker==1.9.0
     # via flask
-boto3==1.35.94
+boto3==1.36.4
     # via dallinger
-botocore==1.35.94
+botocore==1.36.4
     # via
     #   boto3
     #   s3transfer
@@ -46,9 +46,9 @@ cryptography==44.0.0
     # via pyopenssl
 decorator==5.1.1
     # via ipython
-executing==2.1.0
+executing==2.2.0
     # via stack-data
-faker==33.3.0
+faker==34.0.1
     # via dallinger
 flask==3.1.0
     # via
@@ -125,7 +125,7 @@ pexpect==4.9.0
     #   ipython
 pip-tools==7.4.1
     # via dallinger
-prompt-toolkit==3.0.48
+prompt-toolkit==3.0.50
     # via ipython
 psutil==6.1.1
     # via dallinger
@@ -141,7 +141,7 @@ pycparser==2.22
     # via cffi
 pygments==2.19.1
     # via ipython
-pyopenssl==24.3.0
+pyopenssl==25.0.0
     # via dallinger
 pyproject-hooks==1.2.0
     # via
@@ -164,9 +164,9 @@ requests==2.32.3
     #   heroku3
 rq==2.1.0
     # via dallinger
-s3transfer==0.10.4
+s3transfer==0.11.1
     # via boto3
-selenium==4.27.1
+selenium==4.28.0
     # via dallinger
 simple-websocket==1.1.0
     # via flask-sock
@@ -208,6 +208,7 @@ trio-websocket==0.11.1
 typing-extensions==4.12.2
     # via
     #   faker
+    #   pyopenssl
     #   selenium
 tzlocal==5.2
     # via
