--- a/dallinger/docker/ssh_templates/docker-compose-server.yml
+++ b/dallinger/docker/ssh_templates/docker-compose-server.yml
@@ -6,6 +6,7 @@ services:
       POSTGRES_USER: dallinger
       POSTGRES_PASSWORD: dallinger
       POSTGRES_DB: dallinger
+      SKIP_CHECK_DALLINGER_VERSION: true
     volumes:
       - dallinger_pg_data:/var/lib/postgresql/data
     healthcheck:
@@ -36,6 +37,7 @@ services:
       - ./dozzle-users.yml:/data/users.yml
     environment:
       - DOZZLE_AUTH_PROVIDER=simple
+      - SKIP_CHECK_DALLINGER_VERSION=true
     networks:
       - dallinger
 
