--- a/requirements.txt
+++ b/requirements.txt
@@ -16,9 +16,9 @@ attrs==25.1.0
     #   trio
 blinker==1.9.0
     # via flask
-boto3==1.36.15
+boto3==1.36.18
     # via dallinger
-botocore==1.36.15
+botocore==1.36.18
     # via
     #   boto3
     #   s3transfer
@@ -42,13 +42,13 @@ click==8.1.8
     #   flask
     #   pip-tools
     #   rq
-cryptography==44.0.0
+cryptography==44.0.1
     # via pyopenssl
 decorator==5.1.1
     # via ipython
 executing==2.2.0
     # via stack-data
-faker==35.2.0
+faker==36.1.0
     # via dallinger
 flask==3.1.0
     # via
@@ -152,7 +152,6 @@ pysocks==1.7.1
 python-dateutil==2.9.0.post0
     # via
     #   botocore
-    #   faker
     #   heroku3
 redis==5.2.1
     # via
@@ -207,9 +206,10 @@ trio-websocket==0.11.1
     # via selenium
 typing-extensions==4.12.2
     # via
-    #   faker
     #   pyopenssl
     #   selenium
+tzdata==2025.1
+    # via faker
 tzlocal==5.2
     # via
     #   apscheduler
