--- a/requirements.txt
+++ b/requirements.txt
@@ -10,15 +10,15 @@ apscheduler==3.11.0
     # via dallinger
 asttokens==3.0.0
     # via stack-data
-attrs==24.3.0
+attrs==25.1.0
     # via
     #   outcome
     #   trio
 blinker==1.9.0
     # via flask
-boto3==1.36.4
+boto3==1.36.18
     # via dallinger
-botocore==1.36.4
+botocore==1.36.18
     # via
     #   boto3
     #   s3transfer
@@ -28,7 +28,7 @@ build==1.2.2.post1
     #   pip-tools
 cached-property==2.0.1
     # via dallinger
-certifi==2024.12.14
+certifi==2025.1.31
     # via
     #   requests
     #   selenium
@@ -42,13 +42,13 @@ click==8.1.8
     #   flask
     #   pip-tools
     #   rq
-cryptography==44.0.0
+cryptography==44.0.1
     # via pyopenssl
 decorator==5.1.1
     # via ipython
 executing==2.2.0
     # via stack-data
-faker==34.0.1
+faker==36.1.0
     # via dallinger
 flask==3.1.0
     # via
@@ -152,7 +152,6 @@ pysocks==1.7.1
 python-dateutil==2.9.0.post0
     # via
     #   botocore
-    #   faker
     #   heroku3
 redis==5.2.1
     # via
@@ -164,9 +163,9 @@ requests==2.32.3
     #   heroku3
 rq==2.1.0
     # via dallinger
-s3transfer==0.11.1
+s3transfer==0.11.2
     # via boto3
-selenium==4.28.0
+selenium==4.28.1
     # via dallinger
 simple-websocket==1.1.0
     # via flask-sock
@@ -207,14 +206,15 @@ trio-websocket==0.11.1
     # via selenium
 typing-extensions==4.12.2
     # via
-    #   faker
     #   pyopenssl
     #   selenium
+tzdata==2025.1
+    # via faker
 tzlocal==5.2
     # via
     #   apscheduler
     #   dallinger
-ua-parser==1.0.0
+ua-parser==1.0.1
     # via
     #   dallinger
     #   user-agents
