--- a/requirements.txt
+++ b/requirements.txt
@@ -16,9 +16,9 @@ attrs==25.1.0
     #   trio
 blinker==1.9.0
     # via flask
-boto3==1.36.18
+boto3==1.37.1
     # via dallinger
-botocore==1.36.18
+botocore==1.37.1
     # via
     #   boto3
     #   s3transfer
@@ -44,11 +44,11 @@ click==8.1.8
     #   rq
 cryptography==44.0.1
     # via pyopenssl
-decorator==5.1.1
+decorator==5.2.1
     # via ipython
 executing==2.2.0
     # via stack-data
-faker==36.1.0
+faker==36.1.1
     # via dallinger
 flask==3.1.0
     # via
@@ -112,7 +112,9 @@ matplotlib-inline==0.1.7
 numpy==2.0.2
     # via dallinger
 outcome==1.3.0.post0
-    # via trio
+    # via
+    #   trio
+    #   trio-websocket
 packaging==24.2
     # via
     #   build
@@ -127,7 +129,7 @@ pip-tools==7.4.1
     # via dallinger
 prompt-toolkit==3.0.50
     # via ipython
-psutil==6.1.1
+psutil==7.0.0
     # via dallinger
 psycopg2==2.9.10
     # via
@@ -165,7 +167,7 @@ rq==2.1.0
     # via dallinger
 s3transfer==0.11.2
     # via boto3
-selenium==4.28.1
+selenium==4.29.0
     # via dallinger
 simple-websocket==1.1.0
     # via flask-sock
@@ -198,11 +200,11 @@ traitlets==5.14.3
     # via
     #   ipython
     #   matplotlib-inline
-trio==0.28.0
+trio==0.29.0
     # via
     #   selenium
     #   trio-websocket
-trio-websocket==0.11.1
+trio-websocket==0.12.2
     # via selenium
 typing-extensions==4.12.2
     # via
@@ -210,7 +212,7 @@ typing-extensions==4.12.2
     #   selenium
 tzdata==2025.1
     # via faker
-tzlocal==5.2
+tzlocal==5.3
     # via
     #   apscheduler
     #   dallinger
