--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ classifiers = [
 ]
 
 dependencies = [
+    "ansi2html",
     "apscheduler",
     "boto3",
     "build",
@@ -53,7 +54,9 @@ dependencies = [
     "pip-tools",
     "psycopg2",
     "psutil",
+    "pygtail",
     "pyopenssl",
+    "python-json-logger",
     "redis",
     "requests",
     "rq",
