--- a/requirements.txt
+++ b/requirements.txt
@@ -6,19 +6,23 @@
 #
 
     # via -r requirements.in
+ansi2html==1.9.2
+    # via dallinger
 apscheduler==3.11.0
     # via dallinger
 asttokens==3.0.0
     # via stack-data
-attrs==25.1.0
+attrs==25.3.0
     # via
     #   outcome
     #   trio
+beautifulsoup4==4.13.3
+    # via dallinger
 blinker==1.9.0
     # via flask
-boto3==1.37.1
+boto3==1.37.23
     # via dallinger
-botocore==1.37.1
+botocore==1.37.23
     # via
     #   boto3
     #   s3transfer
@@ -42,13 +46,13 @@ click==8.1.8
     #   flask
     #   pip-tools
     #   rq
-cryptography==44.0.1
+cryptography==44.0.2
     # via pyopenssl
 decorator==5.2.1
     # via ipython
 executing==2.2.0
     # via stack-data
-faker==36.1.1
+faker==37.1.0
     # via dallinger
 flask==3.1.0
     # via
@@ -94,7 +98,7 @@ itsdangerous==2.2.0
     #   flask-wtf
 jedi==0.19.2
     # via ipython
-jinja2==3.1.5
+jinja2==3.1.6
     # via flask
 jmespath==1.0.1
     # via
@@ -143,6 +147,8 @@ pycparser==2.22
     # via cffi
 pygments==2.19.1
     # via ipython
+pygtail==0.14.0
+    # via dallinger
 pyopenssl==25.0.0
     # via dallinger
 pyproject-hooks==1.2.0
@@ -155,6 +161,8 @@ python-dateutil==2.9.0.post0
     # via
     #   botocore
     #   heroku3
+python-json-logger==3.3.0
+    # via dallinger
 redis==5.2.1
     # via
     #   dallinger
@@ -163,11 +171,11 @@ requests==2.32.3
     # via
     #   dallinger
     #   heroku3
-rq==2.1.0
+rq==2.2.0
     # via dallinger
-s3transfer==0.11.2
+s3transfer==0.11.4
     # via boto3
-selenium==4.29.0
+selenium==4.30.0
     # via dallinger
 simple-websocket==1.1.0
     # via flask-sock
@@ -180,6 +188,8 @@ sniffio==1.3.1
     # via trio
 sortedcontainers==2.4.0
     # via trio
+soupsieve==2.6
+    # via beautifulsoup4
 sqlalchemy==1.4.54
     # via
     #   dallinger
@@ -206,13 +216,14 @@ trio==0.29.0
     #   trio-websocket
 trio-websocket==0.12.2
     # via selenium
-typing-extensions==4.12.2
+typing-extensions==4.13.0
     # via
+    #   beautifulsoup4
     #   pyopenssl
     #   selenium
-tzdata==2025.1
+tzdata==2025.2
     # via faker
-tzlocal==5.3
+tzlocal==5.3.1
     # via
     #   apscheduler
     #   dallinger
