--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -137,11 +137,18 @@ jobs:
 
   docker:
     runs-on: ubuntu-latest
+    environment: ghcr
     steps:
       - uses: actions/checkout@v4
       - name: Get version
         id: vars
         run: echo "version=$(grep __version__\ = dallinger/version.py|sed -e 's/.*= //;s/"//g')" >> $GITHUB_OUTPUT
+      - name: Login to Github ghcr
+        uses: docker/login-action@v3
+        with:
+          username: silviot
+          password: ${{ secrets.GHCR_TOKEN }}
+          registry: ghcr.io
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       - name: Cache Docker layers
