Work on latest-slim in ci.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -166,7 +166,6 @@ jobs:
           load: false
           target: dallinger
           tags: |
-            ghcr.io/dallinger/dallinger:${{ steps.vars.outputs.version }}
             ghcr.io/dallinger/dallinger:latest-slim
           cache-from: type=local,mode=max,src=/tmp/.buildx-cache/dallinger
           cache-to: type=local,mode=max,dest=/tmp/.buildx-cache-new/dallinger
@@ -178,7 +177,6 @@ jobs:
           load: false
           target: dallinger-bot
           tags: |
-            ghcr.io/dallinger/dallinger-bot:${{ steps.vars.outputs.version }}
             ghcr.io/dallinger/dallinger-bot:latest-slim
           cache-from: type=local,mode=max,src=/tmp/.buildx-cache/dallinger-bot
           cache-to: type=local,mode=max,dest=/tmp/.buildx-cache-new/dallinger-bot
@@ -188,11 +186,11 @@ jobs:
           rm -rf /tmp/.buildx-cache
           mv /tmp/.buildx-cache-new /tmp/.buildx-cache
       - name: Tag built image as latest
-        run: docker tag ghcr.io/dallinger/dallinger:${{ steps.vars.outputs.version }} ghcr.io/dallinger/dallinger
+        run: docker tag ghcr.io/dallinger/dallinger:latest-slim ghcr.io/dallinger/dallinger
       - name: Make sure dallinger script entry point is working
-        run: docker run --rm ghcr.io/dallinger/dallinger:${{ steps.vars.outputs.version }} python3 -c "from importlib.metadata import entry_points; tuple(entry_points(group='console_scripts', name='dallinger_heroku_worker'))[0].load()"
+        run: docker run --rm ghcr.io/dallinger/dallinger:latest-slim python3 -c "from importlib.metadata import entry_points; tuple(entry_points(group='console_scripts', name='dallinger_heroku_worker'))[0].load()"
       - name: Make sure dallinger script entry point is working with dallinger source mounted as volume
-        run: docker run -v $PWD/dallinger:/dallinger/dallinger --rm ghcr.io/dallinger/dallinger:${{ steps.vars.outputs.version }} python3 -c "from pkg_resources import load_entry_point; load_entry_point('dallinger', 'console_scripts', 'dallinger_heroku_worker')"
+        run: docker run -v $PWD/dallinger:/dallinger/dallinger --rm ghcr.io/dallinger/dallinger:latest-slim python3 -c "from pkg_resources import load_entry_point; load_entry_point('dallinger', 'console_scripts', 'dallinger_heroku_worker')"
       - name: Set up Python 3.12
         uses: actions/setup-python@v5
         with:
