--- a/requirements.txt
+++ b/requirements.txt
@@ -16,13 +16,13 @@ attrs==25.3.0
     # via
     #   outcome
     #   trio
-beautifulsoup4==4.13.3
+beautifulsoup4==4.13.4
     # via dallinger
 blinker==1.9.0
     # via flask
-boto3==1.37.26
+boto3==1.38.16
     # via dallinger
-botocore==1.37.26
+botocore==1.38.16
     # via
     #   boto3
     #   s3transfer
@@ -32,29 +32,29 @@ build==1.2.2.post1
     #   pip-tools
 cached-property==2.0.1
     # via dallinger
-certifi==2025.1.31
+certifi==2025.4.26
     # via
     #   requests
     #   selenium
 cffi==1.17.1
     # via cryptography
-charset-normalizer==3.4.1
+charset-normalizer==3.4.2
     # via requests
-click==8.1.8
+click==8.2.0
     # via
     #   dallinger
     #   flask
     #   pip-tools
     #   rq
-cryptography==44.0.2
+cryptography==44.0.3
     # via pyopenssl
 decorator==5.2.1
     # via ipython
 executing==2.2.0
     # via stack-data
-faker==37.1.0
+faker==37.3.0
     # via dallinger
-flask==3.1.0
+flask==3.1.1
     # via
     #   dallinger
     #   flask-crossdomain
@@ -71,18 +71,18 @@ flask-wtf==1.2.2
     # via dallinger
 future==1.0.0
     # via dallinger
-gevent==24.11.1
+gevent==25.5.1
     # via
     #   dallinger
     #   gunicorn
-greenlet==3.1.1
+greenlet==3.2.2
     # via
     #   dallinger
     #   gevent
     #   sqlalchemy
 gunicorn==23.0.0
     # via dallinger
-h11==0.14.0
+h11==0.16.0
     # via wsproto
 heroku3==5.2.1
     # via dallinger
@@ -90,7 +90,7 @@ idna==3.10
     # via
     #   requests
     #   trio
-ipython==8.34.0
+ipython==8.36.0
     # via dallinger
 itsdangerous==2.2.0
     # via
@@ -108,18 +108,19 @@ localconfig==1.1.4
     # via dallinger
 markupsafe==3.0.2
     # via
+    #   flask
     #   jinja2
     #   werkzeug
     #   wtforms
 matplotlib-inline==0.1.7
     # via ipython
-numpy==2.2.4
+numpy==2.2.5
     # via dallinger
 outcome==1.3.0.post0
     # via
     #   trio
     #   trio-websocket
-packaging==24.2
+packaging==25.0
     # via
     #   build
     #   gunicorn
@@ -131,7 +132,7 @@ pexpect==4.9.0
     #   ipython
 pip-tools==7.4.1
     # via dallinger
-prompt-toolkit==3.0.50
+prompt-toolkit==3.0.51
     # via ipython
 psutil==7.0.0
     # via dallinger
@@ -163,7 +164,7 @@ python-dateutil==2.9.0.post0
     #   heroku3
 python-json-logger==3.3.0
     # via dallinger
-redis==5.2.1
+redis==6.1.0
     # via
     #   dallinger
     #   rq
@@ -171,11 +172,11 @@ requests==2.32.3
     # via
     #   dallinger
     #   heroku3
-rq==2.2.0
+rq==2.3.3
     # via dallinger
-s3transfer==0.11.4
+s3transfer==0.12.0
     # via boto3
-selenium==4.30.0
+selenium==4.32.0
     # via dallinger
 simple-websocket==1.1.0
     # via flask-sock
@@ -188,7 +189,7 @@ sniffio==1.3.1
     # via trio
 sortedcontainers==2.4.0
     # via trio
-soupsieve==2.6
+soupsieve==2.7
     # via beautifulsoup4
 sqlalchemy==1.4.54
     # via
@@ -210,13 +211,13 @@ traitlets==5.14.3
     # via
     #   ipython
     #   matplotlib-inline
-trio==0.29.0
+trio==0.30.0
     # via
     #   selenium
     #   trio-websocket
 trio-websocket==0.12.2
     # via selenium
-typing-extensions==4.13.0
+typing-extensions==4.13.2
     # via
     #   beautifulsoup4
     #   selenium
