--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ dependencies = [
     "boto3",
     "build",
     "cached-property",
-    "click < 8.2",
+    "click",
     "faker",
     "flask-sock",
     "flask",
@@ -47,7 +47,7 @@ dependencies = [
     "greenlet",
     "gunicorn[gevent]",
     "heroku3",
-    "ipython < 9",
+    "ipython",
     "localconfig",
     "numpy < 2.3",
     "pexpect",
@@ -95,7 +95,7 @@ dev = [
     "pypandoc",
     "pytest",
     "pytest-rerunfailures",
-    "sphinx < 8.2",
+    "sphinx",
     "sphinx_rtd_theme",
     "sphinxcontrib-spelling",
     "tox",
