--- a/requirements.txt
+++ b/requirements.txt
@@ -90,8 +90,10 @@ idna==3.10
     # via
     #   requests
     #   trio
-ipython==8.37.0
+ipython==9.3.0
     # via dallinger
+ipython-pygments-lexers==1.1.1
+    # via ipython
 itsdangerous==2.2.0
     # via
     #   flask
@@ -147,7 +149,9 @@ pure-eval==0.2.3
 pycparser==2.22
     # via cffi
 pygments==2.19.1
-    # via ipython
+    # via
+    #   ipython
+    #   ipython-pygments-lexers
 pygtail==0.14.0
     # via dallinger
 pyopenssl==25.1.0
