--- a/pyproject.toml
+++ b/pyproject.toml
@@ -99,7 +99,7 @@ dev = [
     "sphinx < 8.2",
     "sphinx_rtd_theme",
     "sphinxcontrib-spelling",
-    "sphinx_js",
+    "sphinx-js",
     "tox",
 ]
 docker = [
