Replace appdirs.py with platformdirs
Add platformdirs package
Update demo constraints

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,7 @@ dependencies = [
     "pexpect",
     "pip",
     "pip-tools",
+    "platformdirs",
     "psycopg2",
     "psutil",
     "pygtail",
