--- a/requirements.txt
+++ b/requirements.txt
@@ -132,6 +132,8 @@ pexpect==4.9.0
     #   ipython
 pip-tools==7.4.1
     # via dallinger
+platformdirs==4.3.8
+    # via dallinger
 prompt-toolkit==3.0.51
     # via ipython
 psutil==7.0.0
@@ -172,7 +174,7 @@ requests==2.32.4
     # via
     #   dallinger
     #   heroku3
-rq==2.3.3
+rq==2.4.0
     # via dallinger
 s3transfer==0.13.0
     # via boto3
