--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,14 +3,11 @@ on:
   push:
     tags:
       - v*
-    branches:
-      - upgrade-to-python3.13
 
 jobs:
   release:
     runs-on: ubuntu-latest
     environment: pypi
-    if: startsWith(github.ref, 'refs/tags/')
     steps:
       - uses: actions/checkout@v4
       - name: Install Ubuntu packages
@@ -51,12 +48,7 @@ jobs:
     steps:
       - name: Get version
         id: vars
-        run: |
-          if [[ $GITHUB_REF == refs/tags/* ]]; then
-            echo "version=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
-          else
-            echo "version=python3.13" >> $GITHUB_OUTPUT
-          fi
+        run: echo "version=${GITHUB_REF#refs/*/v}" >> $GITHUB_OUTPUT
       - name: Login to Github ghcr
         uses: docker/login-action@v3
         with:
@@ -73,7 +65,8 @@ jobs:
           load: false
           target: dallinger
           tags: |
-            ghcr.io/dallinger/dallinger:python3.13
+            ghcr.io/dallinger/dallinger:${{ steps.vars.outputs.version }}
+            ghcr.io/dallinger/dallinger:latest
       - name: Build ghcr.io/dallinger/dallinger-bot docker image
         uses: docker/build-push-action@v5
         with:
@@ -81,4 +74,5 @@ jobs:
           load: false
           target: dallinger-bot
           tags: |
-            ghcr.io/dallinger/dallinger-bot:python3.13
+            ghcr.io/dallinger/dallinger-bot:${{ steps.vars.outputs.version }}
+            ghcr.io/dallinger/dallinger:latest
