--- a/pyproject.toml
+++ b/pyproject.toml
@@ -136,7 +136,6 @@ Issues = "http://github.com/Dallinger/Dallinger/issues"
 Repository = "https://github.com/Dallinger/Dallinger"
 
 [tool.hatch.build.targets.wheel.force-include]
-"dev-requirements.txt" = "dev-requirements.txt"
 "dallinger/docker/docker-compose.yml.j2" = "dallinger/docker/docker-compose.yml.j2"
 "dallinger/docker/heroku.yml" = "dallinger/docker/heroku.yml"
 "dallinger/docker/ssh_templates/docker-compose-experiment.yml.j2" = "dallinger/docker/ssh_templates/docker-compose-experiment.yml.j2"
@@ -154,10 +153,8 @@ include = [
     "/dallinger_scripts",
     "/docs",
     "/tests",
-    "/constraints.txt",
-    "/dev-requirements.txt",
+    "/uv.lock",
     "/incubator.png",
-    "/requirements.txt",
 ]
 
 [tool.black]
