--- a/tox.ini
+++ b/tox.ini
@@ -9,10 +9,9 @@ extras =
 usedevelop=True
 commands =
     find . -type f -name "*.py[c|o]" -delete
-    pip install -r dev-requirements.txt
-    pip install -e .[data,dev,jupyter,docker]
-    pip install -e demos
-    pip freeze
+    uv sync --extra dev --extra data --extra jupyter --extra docker
+    uv pip install -e demos
+    uv pip freeze
     coverage run {envbindir}/pytest tests demos {posargs} --runslow --chrome-headless --prolific --prolific_writes
     coverage combine
     coverage report
@@ -39,10 +38,10 @@ extras =
     data
     jupyter
 deps =
-    -r dev-requirements.txt
-    -e .
-    -e demos
+    uv
 commands =
+    uv sync --extra dev --extra data --extra jupyter
+    uv pip install -e demos
     {envbindir}/pytest {posargs}
 passenv =
     CI
@@ -63,10 +62,10 @@ extras =
     data
     jupyter
 deps =
-    -r dev-requirements.txt
-    -e .
-    -e demos
+    uv
 commands =
+    uv sync --extra dev --extra data --extra jupyter
+    uv pip install -e demos
     {envbindir}/pytest {posargs} --mturkfull --runslow
 passenv =
     CI
@@ -83,29 +82,32 @@ passenv =
 
 [testenv:dockertests]
 deps =
-    -r dev-requirements.txt
-    -e .[data]
+    uv
 setenv =
     RUN_DOCKER = 1
 commands =
+    uv sync --extra dev --extra data --extra docker
     {envbindir}/pytest {posargs} -m docker --runslow --chrome-headless -s
 passenv =
     CI
 
 [testenv:style]
+deps =
+    uv
 commands =
-    pip install -r dev-requirements.txt
+    uv sync --extra dev
     flake8
     black --check dallinger dallinger_scripts demos tests
-deps =
-    black
-    flake8
+passenv =
+    CI
 
 [testenv:docs]
+deps =
+    uv
 allowlist_externals =
     make
     yarn
 commands =
-    pip install -r dev-requirements.txt
+    uv sync --extra dev
     yarn --ignore-engines
     make -C docs html
