--- a/tox.ini
+++ b/tox.ini
@@ -12,10 +12,10 @@ commands =
     uv sync --extra dev --extra data --extra jupyter --extra docker
     uv pip install -e demos
     uv pip freeze
-    coverage run {envbindir}/pytest tests demos {posargs} --runslow --chrome-headless --prolific --prolific_writes
-    coverage combine
-    coverage report
-    coverage xml
+    uv run coverage run -m pytest tests demos {posargs} --runslow --chrome-headless --prolific --prolific_writes
+    uv run coverage combine
+    uv run coverage report
+    uv run coverage xml
 passenv =
     CI
     DATABASE_URL
@@ -42,7 +42,7 @@ deps =
 commands =
     uv sync --extra dev --extra data --extra jupyter
     uv pip install -e demos
-    {envbindir}/pytest {posargs}
+    uv run pytest {posargs}
 passenv =
     CI
     DATABASE_URL
@@ -66,7 +66,7 @@ deps =
 commands =
     uv sync --extra dev --extra data --extra jupyter
     uv pip install -e demos
-    {envbindir}/pytest {posargs} --mturkfull --runslow
+    uv run pytest {posargs} --mturkfull --runslow
 passenv =
     CI
     DATABASE_URL
@@ -87,7 +87,7 @@ setenv =
     RUN_DOCKER = 1
 commands =
     uv sync --extra dev --extra data --extra docker
-    {envbindir}/pytest {posargs} -m docker --runslow --chrome-headless -s
+    uv run pytest {posargs} -m docker --runslow --chrome-headless -s
 passenv =
     CI
 
@@ -96,8 +96,8 @@ deps =
     uv
 commands =
     uv sync --extra dev
-    flake8
-    black --check dallinger dallinger_scripts demos tests
+    uv run flake8
+    uv run black --check dallinger dallinger_scripts demos tests
 passenv =
     CI
 
