--- a/tox.ini
+++ b/tox.ini
@@ -40,7 +40,7 @@ extras =
 deps =
     uv
 commands =
-    uv sync --extra dev --extra data --extra jupyter
+    uv sync --extra dev --extra data --extra jupyter --extra docker
     uv pip install -e demos
     uv run pytest {posargs}
 passenv =
@@ -64,7 +64,7 @@ extras =
 deps =
     uv
 commands =
-    uv sync --extra dev --extra data --extra jupyter
+    uv sync --extra dev --extra data --extra jupyter --extra docker
     uv pip install -e demos
     uv run pytest {posargs} --mturkfull --runslow
 passenv =
