--- a/tox.ini
+++ b/tox.ini
@@ -32,6 +32,7 @@ passenv =
     threads
 allowlist_externals =
     find
+    uv
 
 [testenv:fast]
 extras =
@@ -56,6 +57,8 @@ passenv =
     AWS_REGION
     mturk_worker_id
     threads
+allowlist_externals =
+    uv
 
 [testenv:mturkfull]
 extras =
@@ -79,6 +82,8 @@ passenv =
     aws_secret_access_key
     mturk_worker_id
     threads
+allowlist_externals =
+    uv
 
 [testenv:dockertests]
 deps =
@@ -90,6 +95,8 @@ commands =
     uv run pytest {posargs} -m docker --runslow --chrome-headless -s
 passenv =
     CI
+allowlist_externals =
+    uv
 
 [testenv:style]
 deps =
@@ -100,6 +107,8 @@ commands =
     uv run black --check dallinger dallinger_scripts demos tests
 passenv =
     CI
+allowlist_externals =
+    uv
 
 [testenv:docs]
 deps =
@@ -107,6 +116,7 @@ deps =
 allowlist_externals =
     make
     yarn
+    uv
 commands =
     uv sync --extra dev
     yarn --ignore-engines
