--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ usedevelop=True
 commands =
     find . -type f -name "*.py[c|o]" -delete
     uv sync --extra dev --extra data --extra jupyter --extra docker
-    uv pip install -e demos
+    cd demos && uv pip install -e . && cd ..
     uv pip freeze
     uv run coverage run -m pytest tests demos {posargs} --runslow --chrome-headless --prolific --prolific_writes
     uv run coverage combine
@@ -42,7 +42,7 @@ deps =
     uv
 commands =
     uv sync --extra dev --extra data --extra jupyter --extra docker
-    uv pip install -e demos
+    cd demos && uv pip install -e . && cd ..
     uv run pytest {posargs}
 passenv =
     CI
@@ -68,7 +68,7 @@ deps =
     uv
 commands =
     uv sync --extra dev --extra data --extra jupyter --extra docker
-    uv pip install -e demos
+    cd demos && uv pip install -e . && cd ..
     uv run pytest {posargs} --mturkfull --runslow
 passenv =
     CI
