--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,8 @@ extras =
     data
     jupyter
 usedevelop=True
+setenv =
+    PYTHONPATH = {toxinidir}/demos
 commands =
     find . -type f -name "*.py[c|o]" -delete
     uv sync --extra dev --extra data --extra jupyter --extra docker
