Fix tomlib error for Python 3.10

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,6 +69,7 @@ dependencies = [
     "tabulate",
     "tenacity",
     "timeago",
+    "tomli",
     "tzlocal",
     "ua-parser",
     "urllib3 < 2",
