--- a/tox.ini
+++ b/tox.ini
@@ -11,9 +11,7 @@ setenv =
     PYTHONPATH = {toxinidir}/demos
 commands =
     find . -type f -name "*.py[c|o]" -delete
-    uv sync --extra dev --extra data --extra jupyter --extra docker
-    sh -c "cd demos && uv pip install -e . && cd .."
-    uv pip freeze
+    uv sync --frozen --extra dev --extra data --extra jupyter --extra docker
     uv run coverage run -m pytest tests demos {posargs} --runslow --chrome-headless --prolific --prolific_writes
     uv run coverage combine
     uv run coverage report
@@ -44,8 +42,7 @@ extras =
 deps =
     uv
 commands =
-    uv sync --extra dev --extra data --extra jupyter --extra docker
-    sh -c "cd demos && uv pip install -e . && cd .."
+    uv sync --frozen --extra dev --extra data --extra jupyter --extra docker
     uv run pytest {posargs}
 passenv =
     CI
@@ -71,8 +68,7 @@ extras =
 deps =
     uv
 commands =
-    uv sync --extra dev --extra data --extra jupyter --extra docker
-    sh -c "cd demos && uv pip install -e . && cd .."
+    uv sync --frozen --extra dev --extra data --extra jupyter --extra docker
     uv run pytest {posargs} --mturkfull --runslow
 passenv =
     CI
@@ -96,7 +92,7 @@ deps =
 setenv =
     RUN_DOCKER = 1
 commands =
-    uv sync --extra dev --extra data --extra docker
+    uv sync --frozen --extra dev --extra data --extra docker
     uv run pytest {posargs} -m docker --runslow --chrome-headless -s
 passenv =
     CI
@@ -107,7 +103,7 @@ allowlist_externals =
 deps =
     uv
 commands =
-    uv sync --extra dev
+    uv sync --frozen --extra dev
     uv run flake8
     uv run black --check dallinger dallinger_scripts demos tests
 passenv =
@@ -123,6 +119,6 @@ allowlist_externals =
     yarn
     uv
 commands =
-    uv sync --extra dev
+    uv sync --frozen --extra dev
     yarn --ignore-engines
     make -C docs html
