--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,7 @@ setenv =
 commands =
     find . -type f -name "*.py[c|o]" -delete
     uv sync --frozen --extra dev --extra data --extra jupyter --extra docker
+    uv run sh -c "cd demos && uv sync -e . && cd .."
     uv run coverage run -m pytest tests demos {posargs} --runslow --chrome-headless --prolific --prolific_writes
     uv run coverage combine
     uv run coverage report
@@ -43,6 +44,7 @@ deps =
     uv
 commands =
     uv sync --frozen --extra dev --extra data --extra jupyter --extra docker
+    uv run sh -c "cd demos && uv sync -e . && cd .."
     uv run pytest {posargs}
 passenv =
     CI
@@ -69,6 +71,7 @@ deps =
     uv
 commands =
     uv sync --frozen --extra dev --extra data --extra jupyter --extra docker
+    uv run sh -c "cd demos && uv sync -e . && cd .."
     uv run pytest {posargs} --mturkfull --runslow
 passenv =
     CI
