--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,7 @@ setenv =
     PYTHONPATH = {toxinidir}/demos
 commands =
     find . -type f -name "*.py[c|o]" -delete
-    uv sync --frozen --extra dev --extra data --extra jupyter --extra docker
+    uv sync --frozen --extra dev --extra data --extra jupyter --extra docker --active
     uv run sh -c "cd demos && uv sync && cd .."
     uv run coverage run -m pytest tests demos {posargs} --runslow --chrome-headless --prolific --prolific_writes
     uv run coverage combine
@@ -43,7 +43,7 @@ extras =
 deps =
     uv
 commands =
-    uv sync --frozen --extra dev --extra data --extra jupyter --extra docker
+    uv sync --frozen --extra dev --extra data --extra jupyter --extra docker --active
     uv run sh -c "cd demos && uv sync && cd .."
     uv run pytest {posargs}
 passenv =
@@ -70,7 +70,7 @@ extras =
 deps =
     uv
 commands =
-    uv sync --frozen --extra dev --extra data --extra jupyter --extra docker
+    uv sync --frozen --extra dev --extra data --extra jupyter --extra docker --active
     uv run sh -c "cd demos && uv sync && cd .."
     uv run pytest {posargs} --mturkfull --runslow
 passenv =
