--- a/tox.ini
+++ b/tox.ini
@@ -12,7 +12,7 @@ setenv =
 commands =
     find . -type f -name "*.py[c|o]" -delete
     uv sync --frozen --extra dev --extra data --extra jupyter --extra docker --active
-    uv run sh -c "cd demos && uv sync && cd .."
+    uv run sh -c "cd demos && uv add --editable . && cd .."
     uv run coverage run -m pytest tests demos {posargs} --runslow --chrome-headless --prolific --prolific_writes
     uv run coverage combine
     uv run coverage report
@@ -44,7 +44,7 @@ deps =
     uv
 commands =
     uv sync --frozen --extra dev --extra data --extra jupyter --extra docker --active
-    uv run sh -c "cd demos && uv sync && cd .."
+    uv run sh -c "cd demos && uv add --editable . && cd .."
     uv run pytest {posargs}
 passenv =
     CI
@@ -71,7 +71,7 @@ deps =
     uv
 commands =
     uv sync --frozen --extra dev --extra data --extra jupyter --extra docker --active
-    uv run sh -c "cd demos && uv sync && cd .."
+    uv run sh -c "cd demos && uv add --editable . && cd .."
     uv run pytest {posargs} --mturkfull --runslow
 passenv =
     CI
