--- a/tox.ini
+++ b/tox.ini
@@ -40,6 +40,7 @@ allowlist_externals =
 extras =
     data
     jupyter
+usedevelop=True
 deps =
     uv
 commands =
@@ -67,6 +68,7 @@ allowlist_externals =
 extras =
     data
     jupyter
+usedevelop=True
 deps =
     uv
 commands =
@@ -90,6 +92,7 @@ allowlist_externals =
     sh
 
 [testenv:dockertests]
+usedevelop=True
 deps =
     uv
 setenv =
@@ -103,6 +106,7 @@ allowlist_externals =
     uv
 
 [testenv:style]
+usedevelop=True
 deps =
     uv
 commands =
@@ -115,6 +119,7 @@ allowlist_externals =
     uv
 
 [testenv:docs]
+usedevelop=True
 deps =
     uv
 allowlist_externals =
